--- a/AAA/xiandai.html
+++ b/AAA/xiandai.html
@@ -454,15 +454,15 @@
                     </a>
                     <div class="absolute top-full left-0 mt-2 w-56 bg-gradient-to-br from-white/98 to-temple-paper/95 backdrop-blur-xl rounded-xl shadow-2xl border border-temple-gold/20 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-500 transform translate-y-2 group-hover:translate-y-0 z-50">
                         <div class="py-3">
-                            <a href="sanjiba.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
-                                <i class="fa fa-gift mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
-                                <span class="font-medium">文创礼品</span>
-                            </a>
-                            <a href="sanjijiu.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
-                                <i class="fa fa-shopping-bag mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
-                                <span class="font-medium">纪念商品</span>
-                            </a>
-                        </div>
+                             <a href="sanjiba.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
+                                 <i class="fa fa-database mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
+                                 <span class="font-medium">数字藏金阁</span>
+                             </a>
+                             <a href="sanjijiu.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
+                                 <i class="fa fa-keyboard-o mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
+                                 <span class="font-medium">金阁键盘</span>
+                             </a>
+                         </div>
                     </div>
                 </div>
                
@@ -522,9 +522,9 @@
                         <i class="fa fa-angle-down transition-transform"></i>
                     </button>
                     <div class="mobile-submenu hidden pl-12 space-y-2">
-                        <a href="sanjiba.html" class="block py-2 px-4 text-temple-red hover:text-temple-gold hover:bg-temple-gold/10 rounded transition-colors">文创礼品</a>
-                        <a href="sanjijiu.html" class="block py-2 px-4 text-temple-red hover:text-temple-gold hover:bg-temple-gold/10 rounded transition-colors">纪念商品</a>
-                    </div>
+                         <a href="sanjiba.html" class="block py-2 px-4 text-temple-red hover:text-temple-gold hover:bg-temple-gold/10 rounded transition-colors">数字藏金阁</a>
+                         <a href="sanjijiu.html" class="block py-2 px-4 text-temple-red hover:text-temple-gold hover:bg-temple-gold/10 rounded transition-colors">金阁键盘</a>
+                     </div>
                 </div>
                 
                 <a href="contact.html"
