fix: 将导航栏logo链接从"#"改为指向首页index.html

--- a/AAA/chaoshneg.html
+++ b/AAA/chaoshneg.html
@@ -601,7 +601,7 @@
     <header id="navbar" class="fixed w-full top-0 z-50 transition-all duration-300">
       <nav class="bg-white/10 backdrop-blur-md py-3 px-4 md:px-8 flex items-center justify-between shadow-md">
           <div class="flex items-center space-x-2">
-              <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
+              <a href="index.html" class="text-temple-red text-2xl font-bold flex items-center">
                   <!-- 增大后的logo -->
                   <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
                   <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">名山与节庆</h2>
