--- a/AAA/contact.html
+++ b/AAA/contact.html
@@ -122,7 +122,7 @@
     <header id="navbar" class="fixed w-full top-0 z-50 transition-all duration-300">
         <nav class="bg-white/90 backdrop-blur-md py-3 px-4 md:px-8 flex items-center justify-between shadow-md">
             <div class="flex items-center space-x-2">
-                <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
+                <a href="index.html" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 替换为图片图标 -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-8 w-auto rounded-md mr-2 object-cover">
                     <span class="font-song">中国古寺</span>
