feat(UI): 添加磨砂玻璃效果并优化导航菜单
style: 调整时间线样式为水平进度条
refactor: 更新导航链接指向正确的页面
test: 添加磨砂效果测试页面

--- a/AAA/jianzhu.html
+++ b/AAA/jianzhu.html
@@ -207,11 +207,11 @@
             <div class="hidden md:flex items-center space-x-16">
                 <a href="index.html#about"
                     class="text-temple-red hover:text-temple-gold transition-colors font-medium relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-temple-gold after:transition-all after:duration-300 hover:after:w-full text-xl">首页</a>
-                <a href="#about"
+                <a href="jzsanjiyi.html"
                     class="text-temple-red hover:text-temple-gold transition-colors font-medium relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-temple-gold after:transition-all after:duration-300 hover:after:w-full text-xl">装饰艺术</a>
-                 <a href="#about"
+                 <a href="jzsanjier.html"
                     class="text-temple-red hover:text-temple-gold transition-colors font-medium relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-temple-gold after:transition-all after:duration-300 hover:after:w-full text-xl">布局解析</a>
-                <a href="#about"
+                <a href="jzsanjisan.html"
                     class="text-temple-red hover:text-temple-gold transition-colors font-medium relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-temple-gold after:transition-all after:duration-300 hover:after:w-full text-xl">建筑风格</a>
                
                 <a href="contact.html"
@@ -256,17 +256,17 @@
                     <i class="fa fa-angle-right mr-4 w-10 text-lg"></i>
                     首页
                 </a>
-                <a href="#about"
+                <a href="jzsanjiyi.html"
                 class="text-temple-red hover:text-temple-gold transition-colors py-4 px-8 rounded-md hover:bg-temple-gold/10 flex items-center text-xl">
                 <i class="fa fa-angle-right mr-4 w-10 text-lg"></i>
                 装饰艺术
                 </a>
-                <a href="#about"
+                <a href="jzsanjier.html"
                     class="text-temple-red hover:text-temple-gold transition-colors py-4 px-8 rounded-md hover:bg-temple-gold/10 flex items-center text-xl">
                     <i class="fa fa-angle-right mr-4 w-10 text-lg"></i>
                     布局解析
                 </a>
-                <a href="#about"
+                <a href="jzsanjisan.html"
                     class="text-temple-red hover:text-temple-gold transition-colors py-4 px-8 rounded-md hover:bg-temple-gold/10 flex items-center text-xl">
                     <i class="fa fa-angle-right mr-4 w-10 text-lg"></i>
                     建筑风格
