--- a/AAA/yishuwenwu.html
+++ b/AAA/yishuwenwu.html
@@ -246,11 +246,11 @@ input:checked + label .description {
                         <div class="py-3">
                              <a href="ysywwsanjiyi.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
                                  <i class="fa fa-home mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
-                                 <span class="font-medium">华严寺</span>
+                                 <span class="font-medium">华严寺壁画</span>
                              </a>
                              <a href="ysywwanjier.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
                                  <i class="fa fa-university mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
-                                 <span class="font-medium">萨迦寺</span>
+                                 <span class="font-medium">萨迦寺经书</span>
                              </a>
                              <a href="ysywwsanjisan.html" class="group/item flex items-center px-5 py-3 text-temple-red hover:text-white hover:bg-gradient-to-r hover:from-temple-red hover:to-temple-gold transition-all duration-300 rounded-lg mx-2 mb-1 transform hover:scale-105 hover:shadow-md">
                                  <i class="fa fa-picture-o mr-3 text-sm opacity-70 group-hover/item:opacity-100"></i>
@@ -554,10 +554,10 @@ input:checked + label .description {
                     <i class="fa fa-chevron-down ml-1 text-xs"></i>
                 </a>
                 <div class="absolute left-0 mt-2 w-48 flex flex-col pl-5 translate-x-1">
-                    <a href="jianzhu.html#about" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-10">建筑风格</a>
-                    <a href="jianzhu.html#about" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-12">布局解析</a>
-                    <a href="jianzhu.html#about" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-12">装饰艺术</a>
-                    <a href="jianzhu.html#about" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-12">著名案例</a>
+                    <a href="jzsanjisan.html" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-10">建筑风格</a>
+                    <a href="jzsanjier.html" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-12">布局解析</a>
+                    <a href="jzsanjiyi.html" class="w-full px-3 py-1.5 text-white hover:text-temple-gold transition-colors text-xs md:text-sm text-left pl-12">装饰艺术</a>
+                   
                 </div>
             </div>
         </div>
