feat(导航): 添加面包屑导航和下拉菜单功能
为所有页面添加面包屑导航组件，增强用户导航体验
在首页导航栏实现桌面端和移动端的下拉菜单功能
优化移动端菜单的交互体验，增加子菜单展开收起功能

--- a/AAA/jianzhu.html
+++ b/AAA/jianzhu.html
@@ -282,14 +282,32 @@
         
     </header>
 
+    <!-- 面包屑导航 -->
+    <nav class="bg-gray-50 border-b border-gray-200 py-3 mt-16">
+      <div class="container mx-auto px-4">
+        <ol class="flex items-center space-x-2 text-sm text-gray-600">
+          <li>
+            <a href="index.html" class="hover:text-temple-red transition-colors duration-200 flex items-center">
+              <i class="fa fa-home mr-1"></i>
+              中国古寺
+            </a>
+          </li>
+          <li class="flex items-center">
+            <i class="fa fa-angle-right mx-2 text-gray-400"></i>
+            <span class="text-temple-red font-medium">建筑文化</span>
+          </li>
+        </ol>
+      </div>
+    </nav>
 
     <!-- banner 区域 -->
-<section class="banner">
-    <div class="banner-text">
-      <img src="../AAA/images/jianzhu/2.png" alt="">
-    </div>
-  </section>
-  <div id="about" class="biaoti mx-auto px-4 pl-16">
+    <section class="banner">
+      <div class="banner-text">
+        <img src="../AAA/images/jianzhu/2.png" alt="">
+      </div>
+    </section>
+    
+    <div id="about" class="biaoti mx-auto px-4 pl-16">
     <div class="text-center mb-16 flex flex-col items-center">
         <!-- 标题部分，整体稍微靠左 -->
         <div class="flex flex-col items-start mb-1 w-full max-w-1.1xl">
