--- a/AAA/contact.html
+++ b/AAA/contact.html
@@ -189,6 +189,24 @@
         </div>
     </header>
 
+    <!-- 面包屑导航 -->
+    <nav class="bg-gray-50 border-b border-gray-200 py-3 mt-16">
+      <div class="container mx-auto px-4">
+        <ol class="flex items-center space-x-2 text-sm text-gray-600">
+          <li>
+            <a href="index.html" class="hover:text-temple-red transition-colors duration-200 flex items-center">
+              <i class="fa fa-home mr-1"></i>
+              中国古寺
+            </a>
+          </li>
+          <li class="flex items-center">
+            <i class="fa fa-angle-right mx-2 text-gray-400"></i>
+            <span class="text-temple-red font-medium">联系我们</span>
+          </li>
+        </ol>
+      </div>
+    </nav>
+
     <script>
        // 导航栏滚动效果
 const navbar = document.getElementById('navbar');
