--- a/AAA/emeishan.html
+++ b/AAA/emeishan.html
@@ -150,6 +150,30 @@
          
   </header>
 
+  <!-- 面包屑导航 -->
+  <nav class="bg-gray-50 border-b border-gray-200 py-3 mt-16">
+    <div class="container mx-auto px-4">
+      <ol class="flex items-center space-x-2 text-sm text-gray-600">
+        <li>
+          <a href="index.html" class="hover:text-temple-red transition-colors duration-200 flex items-center">
+            <i class="fa fa-home mr-1"></i>
+            中国古寺
+          </a>
+        </li>
+        <li class="flex items-center">
+          <i class="fa fa-angle-right mx-2 text-gray-400"></i>
+          <a href="chaoshneg.html" class="hover:text-temple-red transition-colors duration-200">
+            名山与节庆
+          </a>
+        </li>
+        <li class="flex items-center">
+          <i class="fa fa-angle-right mx-2 text-gray-400"></i>
+          <span class="text-temple-red font-medium">峨眉山</span>
+        </li>
+      </ol>
+    </div>
+  </nav>
+
   <main>
     <!-- 英雄区域 -->
     <section id="home" class="relative h-[80vh] min-h-[600px] flex items-center overflow-hidden">
