--- a/AAA/xiandai.html
+++ b/AAA/xiandai.html
@@ -537,6 +537,23 @@
         
     </header>
 
+    <!-- 面包屑导航 -->
+    <nav class="bg-gray-50 border-b border-gray-200 py-3 mt-16">
+      <div class="container mx-auto px-4">
+        <ol class="flex items-center space-x-2 text-sm text-gray-600">
+          <li>
+            <a href="index.html" class="hover:text-temple-red transition-colors duration-200 flex items-center">
+              <i class="fa fa-home mr-1"></i>
+              中国古寺
+            </a>
+          </li>
+          <li class="flex items-center">
+            <i class="fa fa-angle-right mx-2 text-gray-400"></i>
+            <span class="text-temple-red font-medium">现代寺庙与社会</span>
+          </li>
+        </ol>
+      </div>
+    </nav>
 
     <!-- 第一板块：轮播图背景 -->
     <section class="banner">
