--- a/AAA/jianzhu.html
+++ b/AAA/jianzhu.html
@@ -41,6 +41,14 @@
             font-display: swap;
         }
         
+        @font-face {
+            font-family: '南构无恙行书';
+            src: local('南构无恙行书'),
+                 url('南构无恙行书.ttf') format('truetype'),
+                 url('南构无恙行书.ttf') format('opentype');
+            font-display: swap;
+        }
+        
         .font-stylish {
             font-family: '华文中宋', 'STZhongsong', '华文宋体', 'SimSun', serif;
         }
