fix(UI): 修复搜索框在移动设备上的显示问题并调整背景色
移除搜索框的隐藏类，使其在移动设备上可见
将搜索框背景色从透明改为白色以提高可读性

--- a/AAA/yishuwenwu.html
+++ b/AAA/yishuwenwu.html
@@ -473,10 +473,10 @@ input:checked + label .description {
             </div>
 
             <!-- 搜索框 -->
-            <div class="hidden md:flex items-center space-x-2">
+            <div class="flex items-center space-x-2">
                 <div class="relative">
                     <input type="text" placeholder="搜索寺庙..."
-                        class="pl-10 pr-4 py-2 rounded-full bg-white/0 border border-temple-red/30 focus:outline-none focus:ring-2 focus:ring-temple-red/50 text-temple-red placeholder-temple-red/50 transition-all duration-300 w-48 focus:w-64">
+                        class="pl-10 pr-4 py-2 rounded-full bg-white border border-temple-red/30 focus:outline-none focus:ring-2 focus:ring-temple-red/50 text-temple-red placeholder-temple-red/50 transition-all duration-300 w-48 focus:w-64">
                     <i class="fa fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-temple-red/70"></i>
                 </div>
             </div>
