feat: 统一调整页面高度并添加服务器配置
- 将多个页面的banner图片高度统一设置为800px
- 调整首页轮播图高度为850px
- 为wenxuechuanbo.html添加banner-text样式
- 新增server.js文件用于本地开发服务器

--- a/AAA/xiandai.html
+++ b/AAA/xiandai.html
@@ -255,7 +255,7 @@
 }
 .banner-text img {
  width: 100%;  /* 宽度填满父容器 */
- height: auto; /* 高度自动按比例缩放 */
+ height: 800px; /* 高度自动按比例缩放 */
  display: block; /* 去掉默认间隙 */
 }
 </style>
