--- a/AAA/ysywwsanjiyi.html
+++ b/AAA/ysywwsanjiyi.html
@@ -643,7 +643,7 @@
     </nav>
 
     <!-- 英雄区 -->
-    <section class="relative h-screen flex items-center justify-center overflow-hidden">
+    <section class="relative h-[800px] flex items-center justify-center overflow-hidden">
         <div class="absolute inset-0 z-0">
             <img src="../AAA/images/3.1ysyuw/1.png" alt="华严寺全景" class="w-full h-full object-cover">
             <div class="absolute inset-0 "></div>
