--- a/AAA/jianzhu.html
+++ b/AAA/jianzhu.html
@@ -81,7 +81,7 @@
   }
   .banner-text img {
     width: 100%;  /* 宽度填满父容器 */
-    height: auto; /* 高度自动按比例缩放 */
+    height: 800px; /* 高度自动按比例缩放 */
     display: block; /* 去掉默认间隙 */
   }
     /* 内容容器：侧边栏 + 案例列表 */
