--- a/AAA/wenxuechuanbo.html
+++ b/AAA/wenxuechuanbo.html
@@ -308,6 +308,13 @@
       }
     }
   </style>
+  <style>
+     .banner-text img {
+    width: 100%;  /* 宽度填满父容器 */
+    height: 800px; /* 高度自动按比例缩放 */
+    display: block; /* 去掉默认间隙 */
+  }
+  </style>
     
 </head>
 
@@ -772,7 +779,7 @@
 
     <!-- 第一板块：轮播图背景 -->
     <section class="banner">
-        <div class="banner-text relative">
+        <div class="banner-text relative ">
           <img src="../AAA/images/wenhua/2.png" alt="">
           <!-- 文学与传播文字 -->
           <div class="absolute top-8 right-8 z-10">
