--- a/AAA/ysywwsanjisan.html
+++ b/AAA/ysywwsanjisan.html
@@ -544,7 +544,7 @@
 
   <main>
     <!-- 英雄区域 -->
-    <section id="home" class="relative h-[80vh] min-h-[600px] flex items-center overflow-hidden">
+    <section id="home" class="relative h-[800px] min-h-[600px] flex items-center overflow-hidden">
       <div class="absolute inset-0 z-0">
         <img src="../AAA/images/3.1ysyuw/7.png" alt="唐卡艺术" class="w-full h-full object-cover">
         
