refactor: 替换clamp字体大小为固定值并添加批量处理脚本
将HTML文件中的动态字体大小text-[clamp(1.5rem,4vw,2.5rem)]替换为固定值text-2xl
同时添加batch_fix_fontsize.py脚本用于批量处理此类替换

--- a/AAA/yishuwenwu.html
+++ b/AAA/yishuwenwu.html
@@ -234,7 +234,7 @@ input:checked + label .description {
                 <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 增大后的logo -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </a>
             </div>
 
@@ -703,7 +703,7 @@ input:checked + label .description {
             <div class="flex flex-col items-start mb-1 w-full max-w-1.1xl">
                 <!-- 图标和标题文字的组合 -->
                 <div class="flex items-center mb-1">
-                    <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                    <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                     <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">文物雕塑</h2>
 
                 </div>
@@ -784,7 +784,7 @@ input:checked + label .description {
                         <div class="flex flex-col items-start mb-1 w-full max-w-1.1xl">
                             <!-- 图标和标题文字的组合 -->
                             <div class="flex items-center mb-1">
-                                <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                                <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                                 <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">壁画经卷</h2>
     
                             </div>
@@ -852,8 +852,8 @@ input:checked + label .description {
         <div class="relative z-10 h-full flex flex-col justify-between">
             <div class="px-6 md:px-12 pt-48">
                 <div class="flex items-center">
-                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-[clamp(2rem,5vw,3rem)] w-auto rounded-md object-cover mr-4">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-10 w-auto rounded-md object-cover mr-4">
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </div>
             </div>
                         
