--- a/AAA/contact.html
+++ b/AAA/contact.html
@@ -125,7 +125,7 @@
                 <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 增大后的logo -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </a>
             </div>
 
