--- a/AAA/index.html
+++ b/AAA/index.html
@@ -338,7 +338,7 @@
                 <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 增大后的logo -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </a>
             </div>
 
@@ -818,7 +818,7 @@
                     <div class="flex flex-col items-start mb-1 w-full max-w-1.1xl">
                         <!-- 图标和标题文字的组合 -->
                         <div class="flex items-center mb-1">
-                            <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                            <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                             <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">关于古寺</h2>
 
                         </div>
@@ -1080,10 +1080,10 @@
                 <div class="container mx-auto px-4">
                     <div class="text-center mb-18 flex flex-col items-center"> 
                         <div class="flex flex-col items-start mb-2 w-full max-w-xl"> 
-                            <!-- 图标放大：调整 h-[clamp(2rem,6vw,3rem)] 让图标更大 -->
+                            <!-- 图标放大：调整 h-12 让图标更大 -->
                             <div class="flex items-center mb-2">
                                 <img src="../AAA/images/logo.png" alt="中国古寺标志" 
-                                     class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-2 mr-3"> 
+                                     class="h-12 w-auto rounded-md object-cover mt-2 mr-3"> 
                                 <h2 class="text-[clamp(2rem,6vw,3rem)] font-bold text-temple-red font-sans-serif" 
                                     style="font-family: '华文中宋', sans-serif;">古寺</h2>
                             </div>
@@ -1144,7 +1144,7 @@
                         <div class="flex flex-col items-start mb-1 w-full max-w-1.1xl">
                             <!-- 图标和标题文字的组合 -->
                             <div class="flex items-center mb-1">
-                                <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                                <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                                 <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">古寺一隅</h2>
     
                             </div>
@@ -1285,8 +1285,8 @@
         <div class="relative z-10 h-full flex flex-col justify-between">
             <div class="px-6 md:px-12 pt-48">
                 <div class="flex items-center">
-                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-[clamp(2rem,5vw,3rem)] w-auto rounded-md object-cover mr-4">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-10 w-auto rounded-md object-cover mr-4">
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </div>
             </div>
                         
