--- a/AAA/wenxuechuanbo.html
+++ b/AAA/wenxuechuanbo.html
@@ -326,7 +326,7 @@
                 <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 增大后的logo -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </a>
             </div>
 
@@ -804,7 +804,7 @@
         <div class="text-center mb-10 flex flex-col items-center">
             <div class="flex flex-col items-start mb-4 w-full max-w-1.1xl">
                 <div class="flex items-center mb-2">
-                    <img src="../AAA/images/logo.png" alt="中国古寺标志"class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                    <img src="../AAA/images/logo.png" alt="中国古寺标志"class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                     <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">文学作品</h2>
                 </div>
                 <span class="text-gray-600 max-w-1.2xl text-xs uppercase tracking-wider mt-0.5">WEN XUE ZUO PIN</span>
@@ -855,7 +855,7 @@
             <!-- 标题部分 -->
             <div class="flex flex-col items-start mb-4 w-full max-w-1.1xl">
                 <div class="flex items-center mb-2">
-                    <img src="../AAA/images/logo.png" alt="中国古寺标志"class="h-[clamp(2rem,6vw,3rem)] w-auto rounded-md object-cover mt-1 mr-2">
+                    <img src="../AAA/images/logo.png" alt="中国古寺标志"class="h-12 w-auto rounded-md object-cover mt-1 mr-2">
                     <h2 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold text-temple-red font-sans-serif" style="font-family: '华文中宋', sans-serif;">影视游戏</h2>
                 </div>
                 <span class="text-gray-300 max-w-1.2xl text-xs uppercase tracking-wider mt-0.5">YING SHI YOU XI</span>
@@ -890,8 +890,8 @@
         <div class="relative z-10 h-full flex flex-col justify-between">
             <div class="px-6 md:px-12 pt-48">
                 <div class="flex items-center">
-                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-[clamp(2rem,5vw,3rem)] w-auto rounded-md object-cover mr-4">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-10 w-auto rounded-md object-cover mr-4">
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </div>
             </div>
                         
