--- a/AAA/wutaishan.html
+++ b/AAA/wutaishan.html
@@ -115,7 +115,7 @@
                 <a href="#" class="text-temple-red text-2xl font-bold flex items-center">
                     <!-- 增大后的logo -->
                     <img src="../AAA/images/logo.png" alt="中国古寺标志" class="h-12 w-auto rounded-md mr-2 object-cover">
-                    <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                    <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
                 </a>
             </div>
 
@@ -798,8 +798,8 @@
       <div class="relative z-10 h-full flex flex-col justify-between">
           <div class="px-6 md:px-12 pt-48">
               <div class="flex items-center">
-                  <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-[clamp(2rem,5vw,3rem)] w-auto rounded-md object-cover mr-4">
-                  <h2 class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold text-white text-shadow font-stylish">中国古寺</h2>
+                  <img src="../AAA/images/logo2.png" alt="中国古寺标志" class="h-10 w-auto rounded-md object-cover mr-4">
+                  <h2 class="text-2xl font-bold text-white text-shadow font-stylish">中国古寺</h2>
               </div>
           </div>
                       
