refactor: 优化样式并删除无用脚本
调整文学与传播页面的文字阴影效果
修复艺术文物页面图片高度问题
删除已不再使用的批量处理脚本和服务器文件

--- a/AAA/wenxuechuanbo.html
+++ b/AAA/wenxuechuanbo.html
@@ -784,7 +784,7 @@
           <!-- 文学与传播文字 -->
           <div class="absolute top-8 right-8 z-10">
             <h1 class="font-nangou text-8xl text-white font-bold drop-shadow-2xl" 
-                style="text-shadow: 0 4px 12px rgb(0 0 0 / 70%)">
+                style="text-shadow: 0 8px 25px rgba(0, 0, 0, 0.95)">
               文学与传播
             </h1>
           </div>
