--- a/AAA/yishuwenwu.html
+++ b/AAA/yishuwenwu.html
@@ -807,7 +807,7 @@ input:checked + label .description {
         <a href="ysywwsanjiyi.html">
             <div class="md:mt-12">
                 <div class="overflow-hidden rounded-lg shadow-md"> <!-- 添加溢出隐藏容器 -->
-                    <img src="../AAA/images/yishuwenwu/8.png" alt="人物画" class="w-full h-auto mb-2 transition-transform duration-300 hover:scale-105">
+                    <img src="../AAA/images/yishuwenwu/8.png" alt="人物画" class="w-full h-[650px] mb-2 transition-transform duration-300 hover:scale-105">
                 </div>
                 <h3 class="text-lg font-semibold text-gray-800  mt-10">华严寺[露齿犹娉婷，工阁守金经]</h3>
                 <div class="w-20 h-0.5 max-w-1.2xl bg-temple-stone mt-10"></div>
